# paper-summarizer

./: .gitignore  README.md  cli.py  prompts.py  pyproject.toml  summerizer.py
paper_summerizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
