[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-summerizer"
version = "0.1.0"
description = "A CLI tool to summerize pdfs using local ollama models"
requires-python = ">=3.10"
dependencies=[
    "click",
    "requests",
    "pymupdf",
    "termcolor",
]

[project.scripts]
summerize = "cli:cli"

[tool.setuptools]
py-modules = ["cli","summerizer", "prompts"]